--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,6 @@ bin/
 
 run/
 .cache/
-local.properties
 
 # java
 
@@ -42,4 +41,6 @@ replay_*.log
 *.hprof
 *.jfr
 
-old/
+# tokens
+
+local.properties
