--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.caching.debug=false
 
 # Mod properties
 mod.version=0.1.0
+mod.build=26
 mod.group=net.electrisoma
 mod.id=visceralib
 mod.name=VisceraLib
@@ -31,9 +32,6 @@ deps.neoforge_patch=[VERSIONED]
 deps.parchment_version=[VERSIONED]
 
 # Integration
-deps.archApi=[VERSIONED]
-deps.archApi_range_forge=[VERSIONED]
-deps.archApi_range_fabric=[VERSIONED]
 
 # Utilities
 deps.modmenu=[VERSIONED]
