--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -6,6 +6,8 @@ mod.mc_targets=1.21 1.21.1
 deps.neoforge_loader=21.1.129
 deps.neoforge_patch=1.21+build.4
 
+deps.forge_loader=[UNSUPPORTED]
+
 deps.fabric_api_version=0.115.1+1.21.1
 
 deps.parchment_version=2024.11.17
