--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.caching.debug=false
 
 # Mod properties
 mod.version=0.1.0
-mod.build=60
+mod.build=60a
 mod.group=net.electrisoma
 mod.id=visceralib
 mod.name=VisceraLib
