--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,5 @@
 name: Deploy to Maven GitHub Pages
-
-on:
-  push:
-    branches: [ main ] # or trigger on tag if you prefer releases
+on: [ push ]
 
 jobs:
   publish:
@@ -12,11 +9,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up JDK
+      - name: Setup JDK 21
         uses: actions/setup-java@v4
         with:
+          java-version: '21'
           distribution: 'temurin'
-          java-version: '17' # or whatever version your mod uses
 
       - name: Grant execute permission to gradlew
         run: chmod +x ./gradlew
