--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on: [ push ]
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
 
     steps:
       - name: Checkout
@@ -19,6 +22,9 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build and publish to local repo
+        env: # 👈 ADD THIS BLOCK
+          GITHUB_USERNAME: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew publish
 
       - name: Deploy to gh-pages
