--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,8 @@ stonecutter_enabled_fabric_versions=1.20.1, 1.21.1
 stonecutter_enabled_forge_versions=1.20.1
 stonecutter_enabled_neoforge_versions=1.21.1
 
-java.version=[VERSIONED]
+java.version=21
+#java.version=[VERSIONED]
 
 minecraft_version=[VERSIONED]
 min_minecraft_version=[VERSIONED]
