why are we still here -just to suffer?

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,13 @@ mod.license=MIT
 mod.github=https://github.com/Electrisoma/VisceraLib
 
 stonecutter_enabled_platforms=fabric, neoforge, forge
-stonecutter_enabled_common_versions=1.20.1, 1.21.1
-stonecutter_enabled_fabric_versions=1.20.1, 1.21.1
+stonecutter_enabled_common_versions=1.21.1
+stonecutter_enabled_fabric_versions=1.21.1
 stonecutter_enabled_forge_versions=1.20.1
 stonecutter_enabled_neoforge_versions=1.21.1
 
-java.version=21
-#java.version=[VERSIONED]
+#java.version=21
+java.version=[VERSIONED]
 
 minecraft_version=[VERSIONED]
 min_minecraft_version=[VERSIONED]
