--- a/visceralib-core/versions/1.20.1/gradle.properties
+++ b/visceralib-core/versions/1.20.1/gradle.properties
@@ -7,6 +7,6 @@ min_minecraft_version=1.20
 
 deps.parchment=2023.09.03
 
-deps.fabric_loader=0.16.10
-deps.fabric_api=0.92.1
+deps.fabric-loader=0.16.10
+deps.fabric-api=0.92.1
 deps.forge=47.4.0
