--- a/visceralib-core/versions/1.21.1/gradle.properties
+++ b/visceralib-core/versions/1.21.1/gradle.properties
@@ -7,6 +7,6 @@ min_minecraft_version=1.21
 
 deps.parchment=2024.11.17
 
-deps.fabric_loader=0.17.2
-deps.fabric_api=0.115.1
+deps.fabric-loader=0.17.2
+deps.fabric-api=0.115.1
 deps.neoforge=21.1.100
