massive gradle fix and module update - fixed the publish mavenJava task to correctly send to the right group for local maven (no actual maven yet) - created a tag provider in VisceraLib-Datagen - created a model provider in VisceraLib-Datagen - updated the lang provider in VisceraLib-Datagen - created some helpful gradle functions in `build-extensions.kt` - set up modmenu compatibility - trimmed the Fabric API module usage and bundled the used modules in each VisceraLib module - renamed `ResourceLocationUtils.java` to `RLUtils.java` - updated `README.md` to reflect the intended (future) way of implementing VisceraLib

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,5 +29,8 @@ deps.parchment=[VERSIONED]
 
 deps.fabric-loader=[VERSIONED]
 deps.fabric-api=[VERSIONED]
-deps.forge=[VERSIONED]
 deps.neoforge=[VERSIONED]
+
+deps.modmenu=[VERSIONED]
+
+auto_service=1.1.1
