--- a/visceralib-datagen/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/visceralib-datagen/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -8,7 +8,7 @@ modId="${id}_${module}"
 version="${version}"
 displayName="${name}-${moduleCaps}"
 authors="${authors}"
-description="${description}"
+description="Contains code for modloader agnostic data generation utilities."
 logoFile="logo.png"
 logoBlur=false
 displayURL=""
