--- a/visceralib-core/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/visceralib-core/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -8,7 +8,7 @@ modId="${id}_${module}"
 version="${version}"
 displayName="${name}-${moduleCaps}"
 authors="${authors}"
-description="${description}"
+description="Contains essential code for each ${name} module."
 logoFile="logo.png"
 logoBlur=false
 displayURL=""
