cleaned gradle up a little - added a bunch of helper functions for the build scripts - attempted to fix VisceraLib-Registration (didn't work) - fixed some VisceraLib-Datagen stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,28 +2,28 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.caching=true
 org.gradle.caching.debug=false
 
+# mod
+
 mod.version=1.0.0
 
 mod.name=VisceraLib
 mod.id=visceralib
 mod.license=MIT
-mod.description=Multiloader and Multiversion registration library
+mod.description=Multiloader and Multiversion mod development library.
 mod.author=electrisoma
 mod.github=https://github.com/Electrisoma/VisceraLib
 mod.group=net.electrisoma
 mod.module=[VERSIONED]
 mod.module_caps=[VERSIONED]
 
-stonecutter_enabled_platforms=fabric, neoforge
-stonecutter_enabled_common_versions=1.21.1
-stonecutter_enabled_fabric_versions=1.21.1
-stonecutter_enabled_neoforge_versions=1.21.1
+# minecraft
 
-#java.version=21
 java.version=[VERSIONED]
 
 minecraft_version=[VERSIONED]
 min_minecraft_version=[VERSIONED]
+
+# modloader
 
 deps.parchment=[VERSIONED]
 
@@ -31,6 +31,18 @@ deps.fabric-loader=[VERSIONED]
 deps.fabric-api=[VERSIONED]
 deps.neoforge=[VERSIONED]
 
+# stonecutter
+
+stonecutter_enabled_platforms=fabric, neoforge
+stonecutter_enabled_common_versions=1.21.1
+stonecutter_enabled_fabric_versions=1.21.1
+stonecutter_enabled_neoforge_versions=1.21.1
+
+# integrations
+
 deps.modmenu=[VERSIONED]
+deps.better_modlist=[VERSIONED]
+
+# extra utilities
 
 auto_service=1.1.1
