--- a/visceralib-core/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/visceralib-core/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -35,3 +35,13 @@ type="required"
 versionRange="[${minMinecraft},)"
 ordering="NONE"
 side="BOTH"
+
+[modproperties.modmenu]
+badges=["library"]
+
+[modproperties.modmenu_parent]
+id="${id}"
+name= "${name}"
+description= "${description}"
+icon= "logo.png"
+badges= ["library"]
