--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.caching=true
 org.gradle.caching.debug=false
+org.gradle.configuration-cache=false
 
 # mod
 
@@ -30,7 +31,7 @@ deps.min_minecraft_version=[VERSIONED]
 deps.parchment=[VERSIONED]
 deps.mixin_extras=0.5.0
 
-deps.fabric-loader=0.17.2
+deps.fabric-loader=0.18.2
 deps.fabric-api=[VERSIONED]
 deps.neoforge=[VERSIONED]
 
@@ -52,3 +53,7 @@ deps.config_api_version=21.1.3
 
 deps.auto_service=1.1.1
 deps.find_bugs=3.0.2
+loom=1.14-SNAPSHOT
+mdg=2.0.134
+stonecutter=0.8.2
+fletching_table=0.1.0-alpha.22
