oops, missed a spot -set the license to `MIT0` in `gradle.properties`

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ mod.version=1.0.0
 
 mod.name=VisceraLib
 mod.id=visceralib
-mod.license=MIT
+mod.license=MIT0
 mod.description=Multiloader and Multiversion mod development library.
 mod.authors=electrisoma
 mod.contributors=electrisoma
