cleaned logos -made the logo for each module a copy of the logo in "branding" -added a icon for the idea folder?

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,5 +54,5 @@ deps.auto_service=1.1.1
 deps.find_bugs=3.0.2
 loom=1.14-SNAPSHOT
 mdg=2.0.134
-stonecutter=0.8.3-beta.1
+stonecutter=0.8.3
 fletching_table=0.1.0-alpha.22
