--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,44 @@
-build/
-*.ipr
 run/
-*.iws
-out/
-*.iml
 .gradle/
-output/
-bin/
-libs/
-
+build/
+gradle-app.setting
+out/
+logs/
 .kotlin
-.classpath
-.project
-.idea/
 classes/
-.metadata
 .vscode
-.settings
-*.launch
 .architectury-transformer
+
 gradle_client_output.txt
 gradle_server_output.txt
 
+output/
+libs/
+
+## IntelliJ
+
+!.idea/
+!.idea/icon.png
+.idea/*
+*.iml
+*.iws
+*.ipr
+
+## Eclipse
+
+eclipse/
+*.pydevproject
+.project
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
 local.properties
+.classpath
+.settings
+.loadpath
+
+*.launch
