--- a/visceralib-registration-api/common/src/main/resources/mixins/visceralib_registration-common.mixins.json5
+++ b/visceralib-registration-api/common/src/main/resources/mixins/visceralib_registration-common.mixins.json5
@@ -3,7 +3,9 @@
   minVersion: "0.8",
   package: "net.electrisoma.visceralib.mixin.registration",
   compatibilityLevel: "${compatibilityLevel}",
-  mixins: [],
+  mixins: [
+    "accessor.Holder\u0024ReferenceAccessor"
+  ],
   injectors: {
     defaultRequire: 1
   }
