what -how did this get missed?

--- a/visceralib-registration-api-v1/common/src/main/resources/mixins/visceralib_registration_api_v1-common.client.mixins.json5
+++ b/visceralib-registration-api-v1/common/src/main/resources/mixins/visceralib_registration_api_v1-common.client.mixins.json5
@@ -1,9 +1,9 @@
 {
   required: true,
   minVersion: "0.8",
-  package: "net.electrisoma.visceralib.mixin.registration",
+  package: "net.electrisoma.visceralib.mixin.registration.v1.client",
   compatibilityLevel: "${compatibilityLevel}",
-  mixins: [],
+  client: [],
   injectors: {
     defaultRequire: 1
   }
