Documentation and test -updated the `README.md` for VisceraLib Registration API (v1) -added some extra test helpers to test stuff testingly

--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ stonecutter_enabled_neo_versions   =1.21.1
 # integrations
 
 run_modmenu=true
-run_better_modlist=false
+run_better_modlist=true
 deps.modmenu=[VERSIONED]
 deps.better_modlist=[VERSIONED]
 deps.config_api_version=21.1.3
