gradle fix -updated build scripts to work with the fat jars -removed test implementations -added some helpers to modules -adjusted the build extensions -cleaned up javadocs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build with Gradle
-        run: chmod +x gradlew && ./gradlew build # publish
+        run: chmod +x gradlew && ./gradlew build
         env:
           MAVEN_USER: ${{ secrets.MAVEN_USER }}
           MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
