--- a/gradle.properties
+++ b/gradle.properties
@@ -30,10 +30,9 @@ deps.min_minecraft_version=[VERSIONED]
 deps.parchment=[VERSIONED]
 deps.mixin_extras=0.5.0
 
-deps.fabric-loader=0.18.2
-deps.fabric-api=[VERSIONED]
+deps.fabric_loader=0.18.2
+deps.fabric_api=[VERSIONED]
 deps.neoforge=[VERSIONED]
-deps.forge=[VERSIONED]
 
 # stonecutter
 
@@ -43,8 +42,8 @@ stonecutter_enabled_neo_versions   =1.21.1
 
 # integrations
 
-run_modmenu=true
-run_better_modlist=true
+run_modmenu=false
+run_better_modlist=false
 deps.modmenu=[VERSIONED]
 deps.better_modlist=[VERSIONED]
 deps.config_api_version=21.1.3
