--- a/visceralib-datagen-api-v1/common/src/main/resources/mixins/visceralib_datagen_api_v1-common.mixins.json5
+++ b/visceralib-datagen-api-v1/common/src/main/resources/mixins/visceralib_datagen_api_v1-common.mixins.json5
@@ -5,7 +5,7 @@
   compatibilityLevel: "${compatibilityLevel}",
   mixins: [
     "TagAppenderMixin",
-    "TagsProviderMixin"
+    "TagsProviderMixin",
   ],
   injectors: {
     defaultRequire: 1
