--- a/visceralib/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/visceralib/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -14,6 +14,9 @@ issueTrackerURL="${github}/issues"
     logoBlur=false
     displayURL="${github}"
 
+[[accessTransformers]]
+    file="META-INF/accesstransformer.cfg"
+
 [[dependencies.visceralib]]
     modId="neoforge"
     type="required"
