--- a/visceralib-item-hooks-v1/fabric/versions/1.21.1/gradle.properties
+++ b/visceralib-item-hooks-v1/fabric/versions/1.21.1/gradle.properties
@@ -7,6 +7,6 @@ deps.min_minecraft_version=1.21
 
 deps.parchment=2024.11.17
 
-deps.fabric-api=0.115.1
+deps.fabric_api=0.115.1
 
 deps.modmenu=11.0.3
