--- a/visceralib-splashes-v1/common/src/main/resources/mixins/visceralib_splashes_v1-common.client.mixins.json5
+++ b/visceralib-splashes-v1/common/src/main/resources/mixins/visceralib_splashes_v1-common.client.mixins.json5
@@ -1,10 +1,11 @@
 {
   required: true,
   minVersion: "0.8",
-  package: "net.electrisoma.visceralib.mixin.core.client",
+  package: "net.electrisoma.visceralib.mixin.splashes.v1.client",
   compatibilityLevel: "${compatibilityLevel}",
   client: [
-    "SplashManagerMixin"
+    "SplashManagerMixin",
+    "SplashRendererMixin"
   ],
   injectors: {
     defaultRequire: 1
