--- a/visceralib-splashes-v1/common/src/main/resources/mixins/visceralib_splashes_v1-common.mixins.json5
+++ b/visceralib-splashes-v1/common/src/main/resources/mixins/visceralib_splashes_v1-common.mixins.json5
@@ -1,7 +1,7 @@
 {
   required: true,
   minVersion: "0.8",
-  package: "net.electrisoma.visceralib.mixin.dsp",
+  package: "net.electrisoma.visceralib.mixin.networking.v1",
   compatibilityLevel: "${compatibilityLevel}",
   mixins: [],
   injectors: {
