--- a/visceralib-splashes-v1/fabric/src/main/resources/mixins/visceralib_splashes_v1-fabric.mixins.json5
+++ b/visceralib-splashes-v1/fabric/src/main/resources/mixins/visceralib_splashes_v1-fabric.mixins.json5
@@ -1,9 +1,9 @@
 {
   required: true,
   minVersion: "0.8",
-  package: "net.electrisoma.visceralib.mixin.core.client",
+  package: "net.electrisoma.visceralib.mixin.networking.v1",
   compatibilityLevel: "${compatibilityLevel}",
-  client: [],
+  mixins: [],
   injectors: {
     defaultRequire: 1
   }
