general gradle upgrade -added new helpers for project detection -added new access widener location helper -added new maven helpers -added new libs.gradle.toml file for gradle build scripts -removed stonecutter code -split gradle properties on all existing modules -reformatted every single build script -removed versioned gradle properties -added comments for modules in the settings script

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,7 @@ min_minecraft_version=1.21
 
 parchment=2024.11.17
 mixin_extras=0.5.0
+sponge_mixin=0.15.2+mixin.0.8.7
 
 fabric_loader=0.18.2
 fabric_api=0.115.1
@@ -36,24 +37,9 @@ neoforge=21.1.205
 
 supported_loaders=neoforge, fabric
 
-# stonecutter
-
-stonecutter_enabled_common_versions=1.21.1
-stonecutter_enabled_fabric_versions=1.21.1
-stonecutter_enabled_neo_versions   =1.21.1
-
 # integrations
 
 run_modmenu=false
 run_better_modlist=false
 modmenu=11.0.3
 better_modlist=1.1.20
-
-# extra utilities
-
-auto_service=1.1.1
-find_bugs=3.0.2
-loom=1.14-SNAPSHOT
-mdg=2.0.134
-stonecutter=0.8.3
-fletching_table=0.1.0-alpha.22
