--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,12 +6,14 @@ fletching_table="0.1.0-alpha.22"
 autoservice="1.1.1"
 find_bugs="3.0.2"
 spotless = "8.1.0"
+tasktree = "4.0.1"
 
 [libraries]
 
 loom = { module = "net.fabricmc.fabric-loom-remap:net.fabricmc.fabric-loom-remap.gradle.plugin", version.ref = "loom" }
 mdg = { module = "net.neoforged.moddev:net.neoforged.moddev.gradle.plugin", version.ref = "mdg" }
 spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless" }
+tasktree = { module = "com.dorongold.task-tree:com.dorongold.task-tree.gradle.plugin", version.ref = "tasktree" }
 
 findbugs = { module = "com.google.code.findbugs:jsr305", version.ref = "find_bugs"}
 autoservice = { module = "com.google.auto.service:auto-service", version.ref = "autoservice" }
