--- a/archive/visceralib-networking-api-v1/neoforge/src/main/resources/mixins/visceralib_networking_api_v1-neoforge.mixins.json5
+++ b/archive/visceralib-networking-api-v1/neoforge/src/main/resources/mixins/visceralib_networking_api_v1-neoforge.mixins.json5
@@ -1,7 +1,7 @@
 {
   required: true,
   minVersion: "0.8",
-  package: "net.electrisoma.visceralib.mixin.networking.v1",
+  package: "net.electrisoma.visceralib.mixin.rendering.v1",
   compatibilityLevel: "${compatibilityLevel}",
   mixins: [],
   injectors: {
