--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,8 @@ tasktree = "4.0.1"
 
 [libraries]
 
-loom = { module = "net.fabricmc.fabric-loom-remap:net.fabricmc.fabric-loom-remap.gradle.plugin", version.ref = "loom" }
-mdg = { module = "net.neoforged.moddev:net.neoforged.moddev.gradle.plugin", version.ref = "mdg" }
+#loom = { module = "net.fabricmc.fabric-loom-remap:net.fabricmc.fabric-loom-remap.gradle.plugin", version.ref = "loom" }
+#mdg = { module = "net.neoforged.moddev:net.neoforged.moddev.gradle.plugin", version.ref = "mdg" }
 
 spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless" }
 tasktree = { module = "com.dorongold.task-tree:com.dorongold.task-tree.gradle.plugin", version.ref = "tasktree" }
@@ -21,6 +21,10 @@ autoservice = { module = "com.google.auto.service:auto-service", version.ref = "
 autoservice_annotations = { module = "com.google.auto.service:auto-service-annotations", version.ref = "autoservice" }
 
 [plugins]
+
+loader_loom = { id = "net.fabricmc.fabric-loom-remap", version.ref = "loom" }
+loader_loom_companion = { id = "net.fabricmc.fabric-loom-companion", version.ref = "loom" }
+loader_mdg = { id = "net.neoforged.moddev", version.ref = "mdg" }
 
 fletchingtable_neo = { id = "dev.kikugie.fletching-table.neoforge", version.ref = "fletching_table" }
 fletchingtable_fab = { id = "dev.kikugie.fletching-table.fabric", version.ref = "fletching_table" }
